<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.android.justjava.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/quantityText"
        android:textAllCaps="true"/>

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginBottom="16dp">

       <Button
           android:layout_width="48dp"
           android:layout_height="48dp"
           android:onClick="increment"
           android:text="@string/increment" />

       <TextView
           android:id="@+id/quantity_text_view"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/quantityValue"
           android:textColor="@android:color/black"
           android:layout_marginLeft="8dp"
           android:layout_marginRight="8dp"
           android:textSize="16sp" />

       <Button
           android:layout_width="48dp"
           android:layout_height="48dp"
           android:onClick="decrement"
           android:text="@string/decrement" />

   </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/priceText"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/order_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orderTotal"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder"
        android:text="@string/orderButtonText"
        android:textAllCaps="true" />

</LinearLayout>
